# ID_Crad_FaceDetction_v1

./: .gitignore  BUILD_WORKFLOW.md  DUPLICATE_DETECTION_FIX.md  MODELS_ARCHITECTURE.md  README.md  ROADMAP.md  TECHNICAL_DOCS.md  check_onnx_shape.py  database.db  debug_onnx.py  debug_onnx_2.py  debug_onnx_3.py  debug_onnx_fixed.py  extract_frames.py  fix_onnx_meta.py  fix_onnx_meta_v2.py  requirements.txt  run_camera.py  test_cuda.py  test_lib_names.txt  test_pt_and_export.py
backend/: auth.py  cleanup_db.py  database.db  database_config.py  export_onnx.py  idcard.yaml  main.py  mount_static.txt  seed_admin.py  server.py  test_video_api.py
backend/database/: encodings.pkl
backend/modules/: face_ident.py  live_feed.py  model_onnx.py  tracker.py  tracker_simple.py  utils.py
backend_rust/: Cargo.toml  build_log.txt
backend_rust/src/: auth.rs  handlers.rs  main.rs  models.rs  yolo.rs
frontend_web/: package-lock.json  package.json
frontend_web/src/app/: Landing.module.css  globals.css  page.tsx
frontend_web/src/app/analytics/: Charts.tsx  analytics.module.css  page.tsx
frontend_web/src/app/components/: Dashboard.module.css  Dashboard.tsx  ExportButton.module.css  ExportButton.tsx  ImageLightbox.module.css  ImageLightbox.tsx  LoadingSkeleton.module.css  LoadingSkeleton.tsx  Logs.module.css  NavStyles.ts  Navigation.module.css  Navigation.tsx  Pagination.module.css  Pagination.tsx  SearchFilter.module.css  SearchFilter.tsx  StatsCard.module.css  StatsCard.tsx  Toast.module.css  Toast.tsx  useToast.tsx
frontend_web/src/app/login/: login.module.css  page.tsx
(+7 files in other folders)
