[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "9.2"
dotenvy = "0.15"
anyhow = "1.0"

# Computer Vision (Phase 2)
# Using 'download-binaries' to avoid manual DLL setup on Windows
ort = { version = "2.0.0-rc.0", features = ["download-binaries", "ndarray"] } 
image = "0.24"
ndarray = "0.15"
